# TechCommerce

./: .coverage  .coveragerc  Dockerfile  README.md  db.sqlite3  docker-compose.yml  dockerfile  manage.py  pyproject.toml  pytest.ini  requirements.txt  settings.py  urls.py
docs/: der.puml  desafios.md  progress.md  requisitos.md
scripts/: demo.sh  seed.py
store/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_itempedido_id_alter_pagamento_id_and_more.py  __init__.py
techcommerce/: asgi.py  settings.py  urls.py  wsgi.py
tests/: __init__.py  conftest.py  test_api.py  test_models.py
